<resources>
    <string name="app_name">MyMainApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="licenseKey">76aa754</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="register_link_click_to_register">Register link..Click to register...</string>
    <string name="register">Register</string>
    <string name="first_name">first name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="click_event_person">Click Event Person</string>
    <string name="logout">Logout</string>
</resources>