<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.mymainapp.ui.login.LoginViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">


        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_edit_text"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="90dp"
            android:hint="@string/username"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:background="@drawable/bg_edit_text"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="14dp"
            android:hint="@string/password"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:paddingEnd="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_view_register_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            android:layout_marginTop="30dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/register_link_click_to_register"
            android:textSize="16sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>