<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.mymainapp.ui.register.RegisterViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="10dp"
            app:tint="@color/black"
            android:onClick="@{listener::onClick}"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/image_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/black"
            android:text="@string/register"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/image_back"
            app:layout_constraintTop_toTopOf="@+id/image_back" />

        <EditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register"
            android:layout_marginTop="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text_register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/first_name"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <EditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_first_name"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text_register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/last_name"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_last_name"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text_register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text_register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="number"
            android:hint="@string/phone_number"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_phone_number"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_edit_text_register"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="number"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="14dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:onClick="@{listener::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>